functions in speech to text

--- a/speech_assistant_tuto/.env
+++ b/speech_assistant_tuto/.env
@@ -1,3 +1,4 @@
+GROQ_API_KEY='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'
 OPENAI_API_KEY=XXXXXX
 AZURE_OPENAI_API_KEY=XXXXXX
 ELEVENLABS_API_KEY=XXXXXX
